# auto-rag-agent

./: .gitignore  README.md  pyproject.toml
rag_agent/: config.py  main.py
rag_agent/db/: __init__.py  connection.py  models.py
rag_agent/tools/: indexer.py  retriever.py  summarizer.py
rag_agent/tools/utils/: embeddings.py  ner.py  semantic_search.py
tests/: conftest.py
tests/db/: __init__.py  conftest.py  test_connection.py  test_document_model.py  test_init.py
tests/tools/: __init__.py  test_indexer.py  test_retriever.py  test_summarizer.py
tests/tools/utils/: __init__.py  test_embeddings.py  test_ner.py
