[tool.poetry]
name = "rag-agent"
version = "0.1.0"
description = ""
authors = ["ssalb <40628560+ssalb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.0"
torch = "^2.6.0"
smolagents = {version="^1.11.0", extras=["mlx-lm"]}
duckdb = "^1.2.1"
sentence-transformers = "^3.4.1"
docling = "^2.28.0"
numpy = "<2"
gradio = "^5.22.0"
huggingface-hub = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
